# cmake-skeleton

./: .gitignore  README.md
CMake/: CMakeLists.txt  compile.sh
CMake/modules/: FindSFML.cmake
CMake/scripts/: distclean.cmake
Docs/: Doxyfile  Doxyfile.in
Main/src/: main.cpp  todelete.cpp  todelete.hpp
Project/include/: time.hpp
Project/src/: main.cpp  whattotest.cpp
Scripts/: clean.sh  compile.sh  make.sh  reconfigure.sh
Testing/: tests.cpp
